--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Backend API para The Sustainable Island - Mapa de Fuentes de Agua",
+  "description": "Backend API for The Sustainable Island - Water Fountains Map",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
